feat!: remove dedicated GHCR integration
